added pytest detection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.testing.pytestArgs": [
-        "fundamentals"
+        "fundamentals",
+        "structures"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
