--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "python.testing.pytestArgs": [
         "fundamentals",
-        "structures"
+        "structures",
+        "oop"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
